@@ -1,3 +1,8 @@
+
+BUG FIXES
+
+-- Fixed bug in conjugacy checking of CAR model structures
+
                             CHANGES IN VERSION 0.7.1 (March 2019)
 
 USER LEVEL CHANGES
